--- a/modul-2/220441100007-JuwitaFebriyanti/tugasmodul2/app/src/main/res/layout/activity_halaman_profil.xml
+++ b/modul-2/220441100007-JuwitaFebriyanti/tugasmodul2/app/src/main/res/layout/activity_halaman_profil.xml
@@ -75,7 +75,7 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="@font/poppins_bold"
         android:lineSpacingExtra="25.5sp"
         android:text="Profile Singkat"
@@ -86,9 +86,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
-        android:layout_width="355dp"
-        android:layout_height="232dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="375dp"
+        android:layout_height="235dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
         android:justificationMode="inter_word"
         android:lineSpacingExtra="1sp"
@@ -96,6 +96,7 @@
         android:textColor="#000000"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
