--- a/modul-2/220441100101-ShafiraZukhrufatuzZahra/TugasModul2Praktikum/app/src/main/res/layout/activity_beranda.xml
+++ b/modul-2/220441100101-ShafiraZukhrufatuzZahra/TugasModul2Praktikum/app/src/main/res/layout/activity_beranda.xml
@@ -20,7 +20,7 @@
             android:fontFamily="@font/poppins_medium"
             android:text="@string/capt2"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="10sp"
             app:layout_constraintStart_toStartOf="@+id/textView15"
             app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
             android:text="Terlalu Jago, Trunojoyo Juara Lagi"
+            android:textSize="10dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/textView13"
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
@@ -39,14 +40,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="13dp"
             android:layout_marginEnd="18dp"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/capt1"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView13"
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
         <TextView
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
             android:text="Terlalu Jago, Trunojoyo Juara Lagi"
+            android:textSize="10sp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/textView11"
             app:layout_constraintTop_toTopOf="@+id/imageView4" />
@@ -64,15 +66,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="13dp"
             android:layout_marginEnd="18dp"
             android:fontFamily="@font/poppins_medium"
             android:justificationMode="inter_word"
             android:text="@string/universitas_trunojoyo_berhasil_meraih_juara_1_dalam_ajang_perlombaan_debat_nasional_yang_diselenggarakan_oleh"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView11"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
         <TextView
@@ -81,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="13dp"
             android:layout_marginEnd="18dp"
+            android:textSize="10sp"
             android:fontFamily="@font/poppins_semibold"
             android:text="Terlalu Jago, Trunojoyo Juara Lagi"
             android:textColor="@color/black"
@@ -91,8 +94,8 @@
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:layout_marginTop="26dp"
             android:layout_marginBottom="50dp"
             android:src="@drawable/besarmini"
@@ -103,8 +106,8 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:layout_marginTop="26dp"
             android:src="@drawable/besarmini"
             app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -113,8 +116,8 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:layout_marginTop="15dp"
             android:src="@drawable/besarmini"
             app:layout_constraintStart_toStartOf="@+id/textView10"
@@ -135,16 +138,16 @@
 
         <ImageView
             android:id="@+id/kecil2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:src="@drawable/kecil"
             app:layout_constraintEnd_toEndOf="@+id/kecil1"
             app:layout_constraintTop_toTopOf="@+id/besar2" />
 
         <ImageView
             android:id="@+id/besar2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="18dp"
             android:layout_marginTop="27dp"
             android:src="@drawable/besar"
@@ -154,8 +157,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginTop="12dp"
             android:src="@drawable/besar"
             app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -164,8 +167,8 @@
 
         <ImageView
             android:id="@+id/kecil1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="27dp"
             android:src="@drawable/kecil"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -178,13 +181,14 @@
             android:layout_marginTop="36dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="Aktivitas Kegiatan"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/beranda"
             app:layout_constraintTop_toBottomOf="@+id/beranda" />
 
         <ImageButton
             android:id="@+id/utmbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="38dp"
+            android:layout_height="42dp"
             android:layout_marginTop="27dp"
             android:src="@drawable/utmmini"
             app:layout_constraintEnd_toEndOf="@+id/kecil1"
@@ -198,7 +202,7 @@
             android:fontFamily="@font/poppins_medium"
             android:text="Beranda"
             android:textColor="#090909"
-            android:textSize="15dp"
+            android:textSize="13dp"
             app:layout_constraintStart_toStartOf="@+id/utmberanda"
             app:layout_constraintTop_toBottomOf="@+id/utmberanda" />
 
@@ -211,7 +215,7 @@
             android:fontFamily="@font/poppins_bold"
             android:text="@string/utm"
             android:textColor="#020202"
-            android:textSize="18dp"
+            android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
