--- a/modul-2/220441100101-ShafiraZukhrufatuzZahra/TugasModul2Praktikum/app/src/main/res/layout/activity_utm.xml
+++ b/modul-2/220441100101-ShafiraZukhrufatuzZahra/TugasModul2Praktikum/app/src/main/res/layout/activity_utm.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".utm"
     android:background="@color/white">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
 
         <TextView
             android:id="@+id/textView8"
@@ -88,11 +83,9 @@
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="27dp"
             android:layout_marginEnd="23dp"
             android:src="@drawable/utmmini"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="@+id/textView2" />
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
