--- a/modul-2/220441100074_ARUM RAHMADHANI/Praktikum2/app/src/main/res/layout/hal1.xml
+++ b/modul-2/220441100074_ARUM RAHMADHANI/Praktikum2/app/src/main/res/layout/hal1.xml
@@ -12,23 +12,25 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="393dp"
+            android:layout_width="423dp"
             android:layout_height="357dp"
             android:src="@drawable/buku"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="250dp"
-            android:layout_height="33dp"
+            android:layout_width="266dp"
+            android:layout_height="32dp"
             android:layout_marginStart="22dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="33dp"
             android:fontFamily="@font/popin2"
-            android:textStyle="bold"
             android:text="Universitas Trunojoyo"
             android:textSize="22dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
